First sketch of javac support for preview classes in JRT FS.